Added responsiveness field and refactored.