@@ -2,13 +2,17 @@ package src.java.domain;
 
 import java.util.*;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class Individual {
 
+    public static final Random RANDOM = new Random();
     private static Individual genome_instance;
     public static final int NUM_EDGES = 8;
-    private final Gene[] genes;
+    private final NeuralConnection[] genes;
+    public int x;
+    public int y;
+    private final float responsiveness;
+
 
     public static Individual getInstance()
     {
@@ -21,9 +25,18 @@ public class Individual {
     static Predicate<NeuralNode> intermediatePredicate = x -> x.nodeTypes.contains(NodeType.END) && x.nodeTypes.contains(NodeType.START);
     static Predicate<NeuralNode> sensoryPredicate = x -> !x.nodeTypes.contains(NodeType.END);
     static Predicate<NeuralNode> actionPredicate = x -> !x.nodeTypes.contains(NodeType.START);
-    public static final NeuralNode[] sensoryNodes = (NeuralNode[]) Arrays.stream(NeuralNode.values()).filter(actionPredicate).collect(Collectors.toList()).toArray();
-    public static final NeuralNode[] intermediateNodes = (NeuralNode[]) Arrays.stream(NeuralNode.values()).filter(intermediatePredicate).collect(Collectors.toList()).toArray();
-    public static final NeuralNode[] actionNodes = (NeuralNode[]) Arrays.stream(NeuralNode.values()).filter(sensoryPredicate).collect(Collectors.toList()).toArray();
+    public static final NeuralNode[] sensoryNodes = getNeuralNodes(actionPredicate);
+
+    private static NeuralNode[] getNeuralNodes(Predicate<NeuralNode> actionPredicate) {
+        var nodes = Arrays.stream(NeuralNode.values()).filter(actionPredicate).toList();
+        var array = new NeuralNode[nodes.size()];
+        Iterator<NeuralNode> it = nodes.iterator();
+        for (int i = 0; i < array.length;) {array[i++] = it.next();}
+        return array;
+    }
+
+    public static final NeuralNode[] intermediateNodes = getNeuralNodes(intermediatePredicate);
+    public static final NeuralNode[] actionNodes = getNeuralNodes(sensoryPredicate);
     public static final NeuralNode[] startNodes = new NeuralNode[sensoryNodes.length + intermediateNodes.length];
     public static final NeuralNode[] endNodes = new NeuralNode[actionNodes.length + intermediateNodes.length];
 
@@ -45,25 +58,26 @@ public class Individual {
     }
 
     private static NeuralNode nextRandomNode(NeuralNode[] neuralNodes) {
-        return neuralNodes[new Random().nextInt(neuralNodes.length)];
+        return neuralNodes[RANDOM.nextInt(neuralNodes.length)];
     }
 
     public static NeuralNode randomStartNode() {
         return nextRandomNode(startNodes);
     }
 
-    public static Gene randomGene() {
-        return new Gene(randomStartNode(), randomEndNode());
+    public static NeuralConnection<NeuralNode, NeuralNode> randomGene() {
+        return new NeuralConnection<>(randomStartNode(), randomEndNode());
     }
 
-    public List<Gene> shuffleGenes(){
-        List<Gene> geneList = Arrays.stream(genes).toList();
+    public List<NeuralConnection> shuffleGenes(){
+        List<NeuralConnection> geneList = Arrays.stream(genes).toList();
         Collections.shuffle(geneList);
         return geneList;
     }
 
     public Individual() {
-        this.genes = new Gene[NUM_EDGES];
+        this.genes = new NeuralConnection[NUM_EDGES];
+        this.responsiveness = RANDOM.nextFloat();
         for (int i = 0; i < genes.length; i++) {
             genes[i] = randomGene();
         }
@@ -71,22 +85,38 @@ public class Individual {
 
     public Individual(List<Individual> parents) {
         //make list of queues
-        List<PriorityQueue<Gene>> genePool = parents.stream().map(x -> x.shuffleGenes().stream().collect(Collectors.toCollection(PriorityQueue::new))).toList();
+        List<PriorityQueue<NeuralConnection>> genePool = parents.stream().map(x -> new PriorityQueue<>(x.shuffleGenes())).toList();
+        List<Float> responsivenesses = parents.stream().map(Individual::getResponsiveness).toList();
+        this.responsiveness = responsivenesses.get(RANDOM.nextInt(responsivenesses.size()));
 
-        HashSet<Gene> genes = new HashSet<>(NUM_EDGES);
-        Iterator<PriorityQueue<Gene>> it = genePool.iterator();
+        HashSet<NeuralConnection<NeuralNode, NeuralNode>> genes = new HashSet<>(NUM_EDGES);
+        Iterator<PriorityQueue<NeuralConnection>> it = genePool.iterator();
         while(genes.size() < NUM_EDGES) {
             genes.add(it.next().remove());
         }
-        this.genes = new Gene[NUM_EDGES];
-        Iterator<Gene> it2 = genes.iterator();
+        this.genes = new NeuralConnection[NUM_EDGES];
+        Iterator<NeuralConnection<NeuralNode, NeuralNode>> it2 = genes.iterator();
         for (int i = 0; i < genes.size(); i++) {
             this.genes[i] = it2.next();
         }
+        //todo randomly mutate the inherited aspects of the individual
+    }
+
+    private Float getResponsiveness() {
+        float f = (float) (RANDOM.nextGaussian()*.1 + responsiveness);
+        if(f < 0 || f > 1) {
+            return responsiveness;
+        }
+        return f;
     }
 
     public static NeuralNode randomEndNode() {
         return nextRandomNode(endNodes);
     }
 
+    public void takeAction() {
+        //todo make a decision on where to move
+
+        //todo update coordinates for individual
+    }
 }
